Fix dialog being cut off
See https://secure.helpscout.net/conversation/210763206/5954/

--- a/assets/css/scss/admin-views.scss
+++ b/assets/css/scss/admin-views.scss
@@ -417,6 +417,7 @@ $gv-overlay-index: 10000;
 }
 
 .gv-dialog {
+	position: absolute;
 	z-index: $gv-overlay-index + 1;
 }
 
